Basic implementation based on duckduckgo