@@ -10,7 +10,7 @@ import org.springframework.http.MediaType;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.web.client.RestClient;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class OllamaConfig {
@@ -24,7 +24,7 @@ public class OllamaConfig {
     @Bean
     public OllamaChatModel ollamaChatModel() {
         MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
-        converter.setSupportedMediaTypes(Arrays.asList(
+        converter.setSupportedMediaTypes(List.of(
                 MediaType.APPLICATION_JSON,
                 MediaType.TEXT_PLAIN,
                 new MediaType("application", "*+json")
